hphp/test/slow/constructor/ctor-compat-2.php.expectf

Fatal error: Declaration of D::__construct() must be compatible with that of I::__construct() in %s on line 6
